# qgis-derrotero-cadastral

./: .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/archive/2026-06-27-core-engine/: archive-report.md  design.md  proposal.md  tasks.md
openspec/changes/blueprint-mx/: design.md  tasks.md
openspec/changes/blueprint-mx/specs/template-engine/: spec.md
openspec/specs/bearing-calculation/: spec.md
openspec/specs/colindancia-detection/: spec.md
openspec/specs/derrotero-generation/: spec.md
openspec/specs/distance-calculation/: spec.md
openspec/specs/template-engine/: spec.md
openspec/specs/vertex-extraction/: spec.md
src/derrotero_catastral/: __init__.py  derrotero_catastral.py  metadata.txt
src/derrotero_catastral/engine/: __init__.py  bearing.py  colindancia.py  distance.py  geometry.py  types.py
src/derrotero_catastral/gui/: __init__.py  dock.py  preview.py
src/derrotero_catastral/processing/: __init__.py  pipeline.py
src/derrotero_catastral/resources/: __init__.py
src/derrotero_catastral/template/: __init__.py  environment.py  filters.py  variables.py
src/derrotero_catastral/template/blueprints/: co.j2  es.j2  generic.j2  mx.j2
tests/: __init__.py  test_bearing.py  test_colindancia.py  test_distance.py  test_filters.py  test_geometry.py  test_variables.py
